--- a/app/src/styles/tags.css
+++ b/app/src/styles/tags.css
@@ -33,7 +33,6 @@ header {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 4px;
 }
 
 input {
